--- a/Views/template/head.ejs
+++ b/Views/template/head.ejs
@@ -7,9 +7,9 @@
     <title>Title</title>
     <!-- CSS only -->
     <!-- Tailwind CSS -->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <!-- My CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
