--- a/Views/template/nav.ejs
+++ b/Views/template/nav.ejs
@@ -1,7 +1,7 @@
 <% if(user){%>
     <nav>
         <div class="flex">
-            <div class="logo-img"><img src="./images/logo.jpg" onclick="location.href='/'"></div>
+            <div class="logo-img"><img src="/images/logo.jpg" onclick="location.href='/'"></div>
             <a href="/my-boards" class="font-semibold text-xl tracking-wide text-gray-600 mx-3 leading-loose">Boards</a>
             <a href="/teams" class="font-semibold text-xl tracking-wide text-gray-600 mx-2 leading-loose">Teams</a>
             <div class="w-1/5 ml-4">
@@ -9,7 +9,7 @@
             </div>
             <div class="nav-auth">
                 <i class="fas fa-bell text-4xl relative text-blue-500 mx-3"></i>
-                <img class=" h-10 w-10 rounded-full mx-auto md:mx-0 md:mr-3 inline-block" src="./images/UserProfiles/<%= user.image %>" onclick="location.href='/my-profile'">
+                <img class=" h-10 w-10 rounded-full mx-auto md:mx-0 md:mr-3 inline-block" src="/images/UserProfiles/<%= user.image %>" onclick="location.href='/my-profile'">
                 <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" onclick="location.href = '/logout'">Log out</button>
             </div>
         </div>
@@ -17,7 +17,7 @@
     <%   }else {%>
         <nav>
             <div class="flex">
-                <div class="logo-img"><img src="./images/logo.jpg" alt=""></div>
+                <div class="logo-img"><img src="/images/logo.jpg" alt=""></div>
                 <div class="nav-auth">
                     <button class="bg-blue-500 hover:bg-transparent  border hover:text-blue-700 hover:border-blue-500 text-white font-bold py-2 px-4 rounded" onclick="location.href = '/login'">
                         Log In</button>
